# Kadr

./: .gitignore  LICENSE  README.md  kadr  pyproject.toml
data/: io.github.cheviiot.kadr.desktop
src/kadr/: __init__.py  __main__.py  application.py  utils.py  window.py
src/kadr/data/: style.css
src/kadr/services/: downloads.py  jackett.py  settings.py  streamer.py  tmdb.py
src/kadr/views/: detail.py  home.py  player.py  settings_dialog.py  torrents.py
src/kadr/widgets/: media_card.py  mpv_widget.py  torrent_row.py
