[project]
name = "kadr"
version = "2.0.0"
description = "Movie & TV torrent search application"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Cheviiot" }]
keywords = ["movies", "torrents", "tmdb", "jackett", "gtk4", "libadwaita"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://github.com/Cheviiot/Kadr"
Repository = "https://github.com/Cheviiot/Kadr"
Issues = "https://github.com/Cheviiot/Kadr/issues"

[project.gui-scripts]
kadr = "kadr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kadr"]
